# game-of-life

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.en.md  README.md  README.zh.md
cmake/: RealUserHome.cmake  cmake_install.cmake.in  cmake_uninstall.cmake.in
patterns/: acorn.cells  beacon.cells  beacon.rle  beehive.cells  beehive.rle  blinker.cells  block.cells  default.cells  diehard.cells  glider-gun.cells  glider-gun.rle  glider.cells  lwss.cells  pentadecathlon.cells  pulsar.cells  r-pentomino.cells  r-pentomino.rle  toad.cells  toad.rle
saves/: acorn.rle  blinker.rle  diehard.rle  pentadecathlon.rle  pulsar.rle
src/: board.c  config.c  config.h  engine.c  history.c  history.h  kitty.c  kitty.h  main.c  popup.c  popup.h  rle.c  rle.h  settings.c  settings.h  sixel.c  sixel.h  sparse.c  sparse.h  terminal.c  terminal.h
src/core/: board.c  board.h  engine.c  engine.h  hashlife.c  hashlife.h  history.c  history.h  sparse.c  sparse.h
src/io/: config.c  config.h  rle.c  settings.c  settings.h
src/render/: kitty.c  sixel.c  sixel.h
src/ui/: main.c  popup.c  popup.h  terminal.c
tests/: test_kitty.c
